0.5007 Not Released

 * Use a MANIFEST.SKIP file based on the default file from ExtUtils::Manifest.

 * Format CHANGES according to CPAN::Changes::Spec. Add test file
   t/release-cpan-changes.t.

 * Convert t/03podcov.t -> t/release-pod-coverage.t.

 * Convert t/02pod.t -> t/release-pod.t.

 * Increment version number.

0.5006 2017-01-11 pjacklam

 * Fix syntax for required version of Math::BigInt::Lib.

 * Better checking of POD coverage.

 * Sync test files with Math-BigInt-1.999808.

0.5005 2016-12-13 pjacklam

 * Add more logic to Makefile.PL regarding INSTALLDIRS (CPAN RT #119199
   and #119225).

0.5004 2016-12-11 pjacklam

 * Fix Makefile.PL so that this module installs over the core version.

 * Sync test files with Math-BigInt-1.999805.

0.5003 2016-12-03 pjacklam

 * Use ExtUtils::MakeMaker rather than Module::Install in Makefile.PL

 * Add LICENSE file, since the other Math::BigInt-related distributions have
   one.

 * Remove INSTALL file. The information is in the README file.

 * Inform that the TODO file is not up to date.

0.5002 2016-11-23 pjacklam

 * Sync test files with Math-BigInt-1.999801. Add t/biglog.t and t/bigroot.t
   since these are included in the test suite for the other backend libraries
   (GMP and Pari).

0.5001 2016-11-17 pjacklam

 * Avoid 'use parent' to retain compatibility with old Perls.

 * Fix incorrect version numbers in the CHANGES file.

 * Trim whitespace.

0.5000 2016-11-15 pjacklam

 * Sync test files with Math-BigInt-1.999800.

 * Math::BigInt::FastCalc is now a subclass of Math::BigInt::Calc, so remove
   aliases like *Math::BigInt::FastCalc::_xxx = \&Math::BigInt::Calc::_xxx.

 * Use OO-calls rather than function calls.

 * Fix documentation error in Math::BigInt::FastCalc

0.42 2016-04-25 pjacklam

 * Sync test files with Math-BigInt-1.999719.

0.41 2016-04-22 pjacklam

 * Sync test files with Math-BigInt-1.999718.

0.40 2016-01-03 pjacklam

 * Sync test files with Math-BigInt-1.999714.

0.39 2015-12-31 pjacklam
